--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Agent Canvas" />
-    <title>Agent Canvas</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Agent Canvas - AI Chat Interface</title>
+
+    <!-- Add SVG favicon -->
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
