fix: simplify page title in index.html for clarity

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Agent Canvas" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Agent Canvas - AI Chat Interface</title>
+    <title>Agent Canvas</title>
 
     <!-- Add SVG favicon -->
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
