--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Agent Canvas" />
+    <!-- 使用環境變數來設定 base 標籤的 href -->
+    <base href="%PUBLIC_URL%/" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Agent Canvas</title>
 
